unpackaged/main/default/objects/UniqueEntry__FTR_Validation_Settings__c/UniqueEntry__FTR_Validation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FTR Validation Settings</label>
</CustomObject>