unpackaged/main/default/objects/UniqueEntry__FTR_Validation_Settings__c/fields/UniqueEntry__FTR_Enable_Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__FTR_Enable_Address_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FTR Enable Address Validation</label>
    <type>Checkbox</type>
</CustomField>