unpackaged/main/default/objects/UniqueEntry__FTR_Validation_Settings__c/fields/UniqueEntry__FTR_Enable_Email_Validation__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__FTR_Enable_Email_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FTR Enable Email Validation</label>
    <type>Checkbox</type>
</CustomField>